<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.HomeFragment">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/constraint_margin_8"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/constraint_margin_8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/constraint_margin_8"
                app:boxBackgroundMode="filled" android:id="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/put_exp"
                    android:importantForAutofill="no"
                    tools:targetApi="o"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btCalc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/constraint_margin_8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/constraint_margin_8"
                android:text="@string/calc"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/btCalc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/btCalc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:visibility="gone">

            <ProgressBar
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
