...
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent" android:contentDescription="@null"
                android:scaleType="fitXY" />

        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/test_text_view"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/constraint_margin_8"
...
